@@ -8,6 +8,7 @@ Known bugs
 bugfix:
 	- save_masks as df would take ndarray instead of DataFrame
 	- select_canvas with ndarray would not allow to select raw
+- draw_landmarks now takes label=False/True and offset argument
 
 2.0.0
 -----
